# binTrans

./: .gitignore  CMakeLists.txt  dep.sh  readme.md
ebpf_resource/: bytecode  bytecode_raw  makefile  xdp1_user.c
include/: binTrans.h  bpf_jit.h  filter.h  log.h  map_manager.h  murmur3.h  riscv-disas.h  type.h
prog/: makefile  xdp1  xdp1_kern.c  xdp1_kern.ll
resource/: makefile
resource/bytecode/: xdp1.bytecode  xdp1.raw  xdp1.riscv  xdp11.raw  xdp11.riscv  xdp2.bytecode  xdp2.raw  xdp_adjust_tail.bytecode  xdp_adjust_tail.raw  xdp_redirect_map.bytecode  xdp_redirect_map.raw  xdp_router_ipv4.bytecode  xdp_router_ipv4.raw  xdp_rxq_info.bytecode  xdp_rxq_info.raw  xdp_tx_iptunnel.bytecode  xdp_tx_iptunnel.raw
resource/prog/: makefile  map_fix.sh  xdp11.dump  xdp11_kern.c  xdp11_kern.ll  xdp_drop.dump  xdp_drop.raw  xdp_drop_clang.dump  xdp_drop_kern.c  xdp_filter.dump  xdp_filter.raw  xdp_filter_kern.c
resource/prog_clang/: makefile  ping_drop.c  ping_drop.dump  ping_drop.raw  ping_drop.riscv  router.c  router_ipv4.c  router_ipv4_bare.c  udp_crc.c  udp_crc.dump  udp_crc.raw  udp_judge.c  udp_payload_filter.c  xdp1.c  xdp11.c  xdp11.dump  xdp11.raw  xdp11.riscv  xdp2.c  xdp3.c  xdp4.c
riscv-helper-function/: bpf_map_lookup_elem.c  link.sh  makefile  output.elf  output.map  start.ld  system.c  system.elf  system.s  test.c  test.elf  test.s  xdp_prog.s
src/: binTrans  binTrans.cpp  binTrans.h  bpf.h  bpf_common.h  bpf_jit.cc  bpf_jit.cpp  bpf_jit.h  const.h  filter.h  log.h  makefile  map_fix.cpp  map_manager.cpp  map_subsystem.h  murmur3.c  riscv-disas.c  riscv-disas.h  test.c  type.h
src/logs/: basic-log.txt
